fix: exception syntax error

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         또한, List-KR 프로젝트의 위키로 정리된 AdGuard 관련 도움말은 <a href='https://github.com/List-KR/List-KR/wiki'>여기</a>에서 확인하실 수 있습니다.
       </h3>
       <code-container>
-        <code>@@*$stealth=dpi,domain=womenonweb.org</code>
+        <code>@@*$stealth=dpi,domain=~womenonweb.org</code>
       </code-container>
     </div>
     <div id='options'>
