--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       </h3>
       <h3>
         이 웹 페이지의 소스 코드는 <a href='https://github.com/List-KR/anti-DPI-excepti0n'>여기</a>에서 확인하실 수 있습니다.
-        또한, List-KR 프로젝트의 위키로 정리된 AdGuard 관련 도움말은 <a href='https://github.com/List-KR/List-KR/wiki'>여기</a>에서 확인하실 수 있습니다.
+        또한, List-KR 커뮤니티 문서로 정리된 AdGuard 관련 도움말은 <a href='https://community.list-kr.com/'>여기</a>에서 확인하실 수 있습니다.
       </h3>
       <code-container>
         <code>@@*$stealth=dpi,domain=~womenonweb.org</code>
